[gd_scene load_steps=3 format=3 uid="uid://bnfd8r3qnuy31"]

[ext_resource type="Script" path="res://scenes/ui/power_up_container.gd" id="1_1tbrx"]
[ext_resource type="PackedScene" uid="uid://cwd1s3rdhrsx3" path="res://scenes/ui/order_box.tscn" id="2_nlwqf"]

[node name="PowerUpContainer" type="PanelContainer"]
custom_minimum_size = Vector2(250, 100)
script = ExtResource("1_1tbrx")
box_scene = ExtResource("2_nlwqf")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="NameLabel" type="Label" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Power"

[node name="PriceContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="UpgradeButton" type="Button" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Upgrade"

[connection signal="pressed" from="MarginContainer/VBoxContainer/UpgradeButton" to="." method="_on_upgrade_button_pressed"]
